# code-lab-py

./: .gitignore
ai/rag/qdrant_rag/: rag.py
azure/: container_apps_metrics.py  pyproject.toml
azure/app_config/: app_config_example.py
azure/durable_function/: http_load_tester.py  start_azurite.cmd
azure/durable_function/queue_trigger_sample/: README.md  function_app.py  host.json  local.settings.json  pyproject.toml  queue_load_tester.py  queue_monitor.py  requirements.txt  send_test_message.py  test_integration_durable.py
azure/durable_function/rate_limiter_entity/: function_app.py
azure/durable_function/rate_limiter_redis/: function_app.py
